- Added the ability for birch, cherry, hazel, and autumn trees to grow into big variants like oak trees can.
- Added the ability for oak, spruce, birch, cherry, hazel, and autumn trees to grow into huge variants when placed in a 2x2.
- Changed the texture of mahogany leaves.
- Fixed an issue where fir planks were associated with hazel sub-blocks.

## Version 4.0.0 ##
Deco as of 4.0.0 is now a fabric mod, without any base class edits, and as such can simply be placed in the mods folder to install.

Some textures in this release have been used or modified from the following sources according to their license:
- Blockus
- Terra Incognita
- Quark
- Wild Nature
- Biome Makeover
- Compat Makeover

- Rewrote the addon from scratch as a fabric mod. Note that data is stored in the same way, and thus it is save-compatible (it is still a good idea to back up your worlds before updating).
- Added a config option, disabled by default, to allow diamond pickaxes to always pick up stone intact instead of requiring isolation.
- Added glazed terracotta pillars, crafted with two glazed terracotta in a vertical line.
- Changed unfired terracotta to be crafted with full blocks instead of 8 piles for convenience.
- Added tall grass and large ferns, which can be spawned from using fertilizer on grass blocks, or by using it on ferns and grass to grow them.
    - Sock's Crops has been accounted for when adding these - it uses the same id and will not be added by deco if SC is present.
- Added tall flowers, which can also be obtained through using fertilizer.
- Changed peonies, lilacs, and rose bushes to be tall flowers. Old versions may be converted into the new tall versions in a crafting grid.
- Changed the textures and names of some flowers.
- Added mud, created by leaving loose dirt underwater.
- Added packed mud, created by piston packing two mud blocks.
- Added mud brick, created with 4 packed mud in a crafting grid, along with associated sub blocks.